fix: Fixed change request trigger upon S3 deletion of an RDF file (also introduced Bucket versioning)
