# services/monolith/openapi/openapi.yaml
@@ -504,90 +504,6 @@ paths:
       responses:
         "204":
           description: The object was deleted successfully
-  /{podId}/slices/{sliceId}/s3/{objectKey}:
-    get:
-      tags:
-      - Low-level Storage API
-      summary: Download a stored object.
-      description: Get an object from the specified slice's S3 storage.
-      parameters:
-      - name: podId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: objectKey
-        in: path
-        required: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: The object content
-    put:
-      tags:
-      - Low-level Storage API
-      summary: Upload an object.
-      description: Put an object to the specified slice's S3 storage.
-      parameters:
-      - name: podId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: objectKey
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: x-amz-content-sha256
-        in: header
-        description: The SHA256 hash of the object content (allows the server to verify
-          the integrity of the content).
-        required: true
-        schema:
-          type: string
-      - name: Content-Type
-        in: header
-        description: The MIME type of the object content.
-        required: true
-        schema:
-          type: string
-      - name: x-amz-date
-        in: header
-        description: "The date and time of the request, in ISO8601 format (offers\
-          \ additional protection against replay attacks)."
-        required: false
-        schema:
-          type: string
-      requestBody:
-        content:
-          '*/*':
-            schema:
-              type: string
-        required: true
-      responses:
-        "200":
-          description: The object was stored successfully
-    delete:
-      tags:
-      - Low-level Storage API
-      summary: Remove a stored object.
-      description: Delete an object from the specified slice's S3 storage.
-      parameters:
-      - name: podId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: objectKey
-        in: path
-        required: true
-        schema:
-          type: string
-      responses:
-        "204":
-          description: The object was deleted successfully
 components:
   schemas:
     Assertion:
